<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="twitter_client_label">Twitter Client</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="title_activity_main_activity1111">MainActivity1111</string>
    <string name="tweet_body_label">This is tweet body</string>
    <string name="screen_name_label">\@foo</string>
    <string name="sample_datetime_label">1 1 2000</string>
    <string name="sample_label">Test String</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="compose_label">Compose</string>
    <string name="whats_happening_label">What\'s happening?</string>
    <string name="tweet_label">Tweet</string>
    <string name="twitter_title">Twitter</string>
    <string name="title_activity_view_tweet">ViewTweetActivity</string>
    <string name="tweet_label">Tweet</string>
    <string name="logout_label">Logout</string>
    <string name="tab1_label">Home</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>

</resources>