<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:paddingBottom="10dp" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvScreenName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:padding="4dp"
        android:text="@string/tweet_body_label" />

    <TextView
        android:id="@+id/tvDiffTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textColor="#a8a8a8"
        android:paddingRight="5dp"
        android:text="@string/sample_datetime_label" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:padding="4dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/sample_label" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvUserName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvUserName"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/screen_name_label"
        android:textColor="#919191"
        android:textStyle="italic" />

</RelativeLayout>
