<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComposeActivity" >

    <Button
        android:id="@+id/btTweet"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/tweet_false"
        android:onClick="onPostTweet"
        android:text="@string/tweet_label" />

    <TextView
        android:id="@+id/tvComposeUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivComposeProfileImage"
        android:text="@string/sample_label" />

    <TextView
        android:id="@+id/tvComposeScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivComposeProfileImage"
        android:layout_toRightOf="@+id/ivComposeProfileImage"
        android:text="@string/sample_label" />

    <EditText
        android:id="@+id/etCompose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivComposeProfileImage"
        android:ems="10"
        android:hint="@string/whats_happening_label" />

    <ImageView
        android:id="@+id/ivComposeProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>
